# Lightbike_Embedded

./: .gitignore  README.md  lightbike case.stl
docs/: DOCS.txt  NOTES.txt
firmware/: CMakeLists.txt  keys.pem
firmware/coldwaveos/: CMakeLists.cmake  README.md  boot.ld  keys.c  linker.ld  upload.jLink
firmware/coldwaveos/include/: adc.h  ble.h  clock.h  crypto.h  dac.h  dma.h  driver.h  errno.h  eth.h  flash.h  gpio.h  i2c.h  i2s.h  kernel.h  logging.h  macro.h  netdb.h  pwm.h  random.h  spi.h  sysconfig.h  timer.h  touch.h  uart.h  wdt.h  wlan.h
firmware/coldwaveos/include/arpa/: inet.h
firmware/coldwaveos/include/ble/: ble_gatt.h
firmware/coldwaveos/include/crypto/: keys.h
firmware/coldwaveos/include/crypto/psa/: crypto.h  crypto_types.h  crypto_values.h
firmware/coldwaveos/include/fs/: fs.h
firmware/coldwaveos/include/ieee802154/: ti_cc1200.h
firmware/coldwaveos/include/kernel/: cmsis_os2.h  cmsis_os2_ext.h
firmware/coldwaveos/include/modem/: gsm_modem.h
firmware/coldwaveos/include/net/ethernet/: ethernetif.h
firmware/coldwaveos/include/net/pppos/: ppposif.h
firmware/coldwaveos/include/ota/: checksum.h  ota.h
firmware/coldwaveos/include/phy/: 8023_MII_STANDARD_REGISTER.h
firmware/coldwaveos/include/platform/coldwave/: coldwave.h
firmware/coldwaveos/include/platform/coldwave/commissioning/: wifi_commissioning.h
firmware/coldwaveos/include/platform/flake/: Connection.h  FlakeConst.h  FlakeTypes.h  Object.h  ServerWire.h  Service.h  Table.h  Wire.h  flake.h  macro.h  util.h
firmware/coldwaveos/include/radio/: rail.h
firmware/coldwaveos/include/sys/: base64.h  ioctl.h  socket.h
firmware/coldwaveos/include/w1/: ds2484.h
firmware/src/: defines.h  globals.h  main.cpp  sysconfig.c
firmware/src/button_ui/: button_interrupt.cpp  button_interrupt.h
firmware/src/buttons/: buttons.cpp  buttons.h
firmware/src/drivers/: button.cpp  button.h  icm20649.cpp  icm20649.h  icm20649_defines.h  icm20649_defs.h  icm20649_emulator.cpp  icm20689.cpp  icm20689.h  ws2812b.c  ws2812b.h
firmware/src/filter_handler/: filter_handler.cpp  filter_handler.h
firmware/src/icm20649/: icm20649.cpp  icm20649.h  icm20649_defines.h
firmware/src/led_controller/: Leds_controller.cpp  Leds_controller.h
firmware/src/led_filters/: LEDFilter.cpp  LEDFilter.h  LEDFilter_Basic.cpp  LEDFilter_BikeWheel.cpp  LEDFilter_Fade.cpp  LEDFilter_Nice.cpp  LEDFilter_Off.cpp  LEDFilter_Smooth.cpp  LEDFilter_Wave.cpp
firmware/src/leds/: ws2812b.c
firmware/src/state_handler/: state_handler.cpp  state_handler.h
firmware/src/state_handlers/: filter_states.h  state_handler.cpp  state_handler.h
firmware/src/utils/: combine_bytes.c  gamma8_table.c  hsv_to_rgb.cpp  map_value.h  power_toggle.c  utils.cpp  utils.h
firmware/src/utils/print-functions/: SEGGER_RTT.h
firmware/src/ws2812b/: ws2812b.c  ws2812b.h
